# Animal_AI

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: ai.py  animal_ai.py  animal_recogn.py  func.py
tests/: test_animal_recog.py  test_func.py
