[project]
name = "animal-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "denisebozza",email = "denisebozza01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pylint (>=3.3.7,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"